--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7096,3 +7096,26 @@ td.visible-print {
     display: none !important;
   }
 }
+
+
+
+
+@media (max-width: 767px) {
+.topvideobig {display: none !important; }
+.topvideosmall {display: block !important;}
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+.topvideobig {display: none !important; }
+.topvideosmall {display: block !important;}
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+.topvideobig {display: block !important; }
+.topvideosmall {display: none !important;}
+}
+
+@media (min-width: 1200px) {
+.topvideobig {display: block !important; }
+.topvideosmall {display: none !important;}
+}
