--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7119,3 +7119,18 @@ td.visible-print {
 .topvideobig {display: block !important; }
 .topvideosmall {display: none !important;}
 }
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+    overflow: hidden;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
